# Bloqade.jl

./: .JuliaFormatter.toml  .coveralls.yml  .gitignore  CITATION.bib  CITATION.cff  CondaPkg.toml  LICENSE  Manifest.toml  Project.toml  README.md  justfile  test.jl  watch.jl
.ci/: Project.toml  README.md  build.jl  codecov.jl  run  run.jl
.ci/src/: BloqadeCI.jl  EaRydCI.jl  docs.jl  example.jl  main.jl
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement.md  other.md
.github/workflows/: CI.yml  CUDA-CI.yml  CompatHelper.yml  Documentation.yml  TagBot.yml  benchmark.yml  ci.yml  runtests.yml  test2.yml
benchmark/: bloqade_compare.jl  earyd_compare.jl  ode.jl  plotit.py  pulser_compare.py  quspin_compare.py  utils.jl
benchmarks/: 8x8.jl  Project.toml  benchmarks.jl  report.jl  runbenchmark.jl  scale.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/3-level/: index.html
dev/capabilities/: index.html
dev/contrib/: index.html
dev/cuda/: index.html
dev/emulation/: index.html
dev/hamiltonians/: index.html
dev/install/: index.html
dev/julia/: index.html
dev/lattices/: index.html
dev/mis/: index.html
dev/multithreading/: index.html
dev/observables/: index.html
dev/quick-start/: index.html
dev/ref/: index.html
dev/registers/: index.html
dev/registry/: index.html
docs/: Manifest.toml  Project.toml  README.md  make.jl
examples/: Project.toml  README.md  scar.jl
generate_schema/: 1D_Z2.jl  1D_scar.jl  1D_scar.json  1detuning_waveform.jl  2D_checkboard.jl  2D_checkboard.json
lib/: Project.toml
notebooks/: Manifest.toml  Project.toml  emulator.jl
project/: README.md  runserver.jl
python/: MANIFEST.in  README.md  build.py  bump_version.py  pyproject.toml
python/bloqade/: __init__.py  julia.py  types.py  version.py
python/tests/: test_bloqade.py  test_types.py
src/: Bloqade.jl  ContinuousEmulator.jl  CuRydbergEmulator.jl  EaRyd.jl  RydbergEmulator.jl  atoms.jl  bravais.jl  cuda.jl  deprecations.jl  device.jl  emulate.jl  expmv.jl  fangli.jl  hamiltonian.jl  hamiltonian2.jl  instructs.jl  jlwrap.jl  measure.jl  mis.jl  observables.jl  ode.jl  patch.jl  precompile.jl  qaoa.jl  qaoa2.jl  qaoa_mis.jl  qaoaopt.jl  register.jl  schema.jl  serialize.jl  subspace.jl  unit_disk.jl  utils.jl  visualize.jl
test/: atoms.jl  cuda.jl  cuda_qaoa.jl  emulate.jl  fangli.jl  hamiltonian.jl  instructs.jl  mat.jl  measure.jl  mis.jl  observables.jl  plots.jl  qaoa.jl  qaoa2.jl  qaoa_mis.jl  qaoaopt.jl  register.jl  runtests.jl  schema.jl  serialize.jl  unit_disk.jl  utils.jl
v0.1.2/: index.html  search_index.js
(+797 files in other folders)
