[tool.poetry]
name = "bloqade"
version = "0.1.0"
description = ""
authors = ["Roger-luo <rogerluo.rl18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
juliacall = "^0.9.3"
juliapkg = "^0.1.5"
matplotlib = "3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
